Refactored the JSON templates for the page.

--- a/empty.html
+++ b/empty.html
@@ -1,5 +1,7 @@
 ---
 layout: default
 ---
-<!-- Load in the initial JSON data to save an additional request. -->
-<script id="apologies-data">[]</script>
+{
+	"name": "Sofas And Stuff",
+	"apologies": []
+}
