Updated the JS to reflect changes we made in the core app code a while back.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Define The Angular App -->
-<html lang="en" ng-app="myModule">
+<html lang="en" ng-app="status-page">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -26,7 +26,7 @@
         <header class="sorry-{{sorry()}}">
             <!-- Output the name of this status page. -->
             <!-- Has to be lower in DOM than carousel to avoid breaking verticle align. -->
-            <h1>{{page.name}} Status Page</h1>
+            <h1>{{page.name}}</h1>
 
             <!-- Switch the status message based on the Sorry state. -->
             <!-- Must be first element inside header to ensure vertical align set propoperly. -->
