--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <!-- Define The Angular App -->
-<html lang="en" ng-app="status-page">
+<html ng-app="status-page">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- We don't want these pages indexed by Google until BETA. -->
@@ -12,13 +11,15 @@
         <!-- Dynamicly set the title using the helper methoe. -->
         <title>{{page.name}}</title>
 
-        <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
 
         <!-- Include CSS Assets. -->
-        <link rel="stylesheet" href="dist/status-page.css" />
+        <link rel="stylesheet" href="dist/stylesheets/status-page.css" />
     </head>
     <body ng-controller="PageCtrl" data-pusher-key="8d89d29aaf9f27452fc5" data-pusher-channel="status-page.sorryapp.com">
         <!-- Header Block For Large Status Message -->
@@ -97,6 +98,6 @@
 
         <!-- Include the required assets. -->
         <!-- Frameworks. -->
-        <script src="dist/status-page.js"></script>
+        <script src="dist/javascripts/status-page.js"></script>
     </body>
 </html>
